--- a/package.json
+++ b/package.json
@@ -8,10 +8,18 @@
     "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "migration": "npx prisma db push && npx prisma generate"
   },
   "dependencies": {
+    "@astrojs/vue": "^1.2.2",
+    "@prisma/client": "^4.8.1",
     "astro": "^1.9.0",
-    "firebase-admin": "^11.4.1"
+    "firebase": "^9.15.0",
+    "firebase-admin": "^11.4.1",
+    "vue": "^3.2.45"
+  },
+  "devDependencies": {
+    "prisma": "^4.8.1"
   }
 }
