--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
     "migration": "npx prisma db push && npx prisma generate"
   },
   "dependencies": {
+    "@astrojs/node": "^4.0.0",
     "@astrojs/vue": "^1.2.2",
     "@prisma/client": "^4.8.1",
-    "astro": "^1.9.0",
+    "astro": "^1.9.1",
     "vue": "^3.2.45"
   },
   "devDependencies": {
